--- a/main nofetched.html
+++ b/main nofetched.html
@@ -122,7 +122,8 @@
             });
 
             let id1;
-            let globalSerieInfo = [];
+            let serieInfocontent = [];
+
             function handlePosterClick(id) {
                 id1 = id;
                 const movieselected = document.getElementById(id);
@@ -394,6 +395,7 @@
 
 
             let pathseries = [];
+            
             function showEpisodes() {
                 var seasonsList = document.getElementById('seasons-list');
                 var episodesList = document.getElementById('episodes-list');
@@ -406,7 +408,7 @@
                     const seasonText = document.getElementById('button-saison').textContent;
                     const seasonNumber = seasonText.replace(/\D/g, '');
                     const season = 'S' + seasonNumber;
-                    let data = globalSerieInfo;
+                    let data = serieInfocontent;
                     let numberOfFiles = findSeasonFilesByIdAndSeason(id1, season).length;
                     if (numberOfFiles === 0) {
                         console.log(`Pas d'épisodes trouvés avec la Saison ${seasonNumber}`);
@@ -417,7 +419,7 @@
 
 
                     function findSeasonFilesByIdAndSeason(id1, season) {
-                        let series = data.find(item => item.id === id1);
+                        let series = data.find(serie => serie.id === id1);
                         if (!series) {
                             console.log(`Pas de saisons trouvées avec la serie ${id1}`);
                             closePopup();
@@ -571,7 +573,7 @@
     <footer>
         <p>&copy;Trapick</p>
     </footer>
-    <script type="module" src="/js/script.js"></script>
+    <script type="module" src="/js/script no fetch.js"></script>
     <!--<script src="https://cdn.plyr.io/3.7.8/plyr.js"></script>-->
 </body>
 
